--- a/source/DiTau/CMakeLists.txt
+++ b/source/DiTau/CMakeLists.txt
@@ -14,7 +14,8 @@ atlas_add_library( DiTauLib src/*.cxx
                    PUBLIC_HEADERS DiTau
                    INCLUDE_DIRS ${ROOT_INCLUDE_DIRS}
                    LINK_LIBRARIES ${ROOT_LIBRARIES}
-                                    AthAnalysisBaseCompsLib AsgTools xAODEventInfo DiTauMassTools xAODTau xAODEgamma xAODMuon xAODJet xAODMissingET AthContainers
+                                    AthAnalysisBaseCompsLib xAODEventInfo DiTauMassTools xAODTau xAODEgamma xAODMuon xAODJet xAODMissingET AthContainers
+				    #AsgTools
 )
 
 # if you add athena components (tools, algorithms) to this package
